# xkcd

./: .gitignore  README.md  install.py  pyproject.toml  version.json  xkcd
.gladie/: .gladieignore
.nada/: .nadainfo
