[tool.poetry]
name = "xkcd"
version = "0.1.0"
description = "Simple script to fetch an xkcd comic"
authors = ["nhtnr <noahtnr@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
